--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>Hello!</h>
+<body>Home Page</h>
 <script src="index.js"></script>
 </body>
 </html>
