--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,11 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Deafblind Scotland</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="images/logo(1).ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
-<body>Home Page</h>
-<script src="index.js"></script>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light my-navbar">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/home}">
+            <img src="images/logo.svg" alt="" width="40" height="8"  class="d-inline-block align-text-top">
+            Deafblind Scotland
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item me-5">
+                    <a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
+                </li>
+                <li class="nav-item me-5">
+                    <a class="nav-link" th:href="@{/}">Accesibility</a>
+                </li>
+                <li class="nav-item me-5">
+                    <button class="btn btn-dark my-custom-button">
+                        <a th:href="@{/learn}" class="text-decoration-none text-white">Get Started</a>
+                    </button>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-lg-6 text-sm-center text-center text-lg-start my-custom-attempt">
+            <h1>Welcome To Deafblind Scotland </h1>
+            <h2>National charity for people with dual sensory loss.</h2>
+            <br>
+            <button class="btn btn-dark my-custom-buttond">
+                <a href="signup.html" class="text-decoration-none text-white">Get Started</a>
+            </button>
+        </div>
+        <div class="col-lg-6 d-none d-lg-block">
+            <img src="images/hero.png" class="img-fluid" alt="Hero Image">
+        </div>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(window).on('resize', function() {
+        var win = $(this);
+        if (win.width() <= 992) { /* Adjust this value as needed */
+            $('.my-custom-attempt').addClass('d-flex flex-column justify-content-center align-items-center vh-100');
+        } else {
+            $('.my-custom-attempt').removeClass('d-flex flex-column justify-content-center align-items-center vh-100');
+        }
+    }).trigger('resize');
+</script>
 </body>
 </html>
