--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deafblind Scotland</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="images/logo(1).ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+
+    <script>
+      function toggleMode(isLightMode) {
+        if(isLightMode) {
+          document.body.classList.add('light-theme');
+        } else {
+          document.body.classList.remove('light-theme');
+        }
+      }
+    </script>
 
 </head>
 <body>
@@ -47,12 +59,32 @@
             <ul>
                 <li><a href="">Small</a></li>
                 <li><a href="">Default</a></li>
-                <li><Large></Large></li>
-                <li>Largest</li>
+                <li><a href="">Large</a></li>
+                <li><a href="">Huge</a></li>
+                <li><a href="">Massive</a></li>
             </ul>
         </div>
     </div>
 </div>
+
+
+
+<div class="container">
+    <h1>Accessibility Tools</h1>
+    <div class="d-grid gap-2">
+        <button class="btn btn--primary" type="button" onclick="toggleMode(true)">
+            <img src="/assets/icons/light.svg" alt="Light Mode">
+            Light Mode
+        </button>
+        <button class="btn btn--secondary" type="button" onclick="toggleMode(false)">
+            <img src="/assets/icons/dark.svg" alt="Dark Mode">
+            Dark Mode
+        </button>
+    </div>
+</div>
+
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
