--- a/src/main/resources/templates/learn.html
+++ b/src/main/resources/templates/learn.html
@@ -80,7 +80,7 @@
             element.remove();
         });
         arrayOfChildren = [];//empty array
-        const input = document.getElementById('lname').value;
+        const input = document.getElementById('lname').value.toUpperCase();
         console.log(input);
         const words = input.split(' ');
 
