--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deafblind Scotland</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="images/logo(1).ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -65,7 +66,9 @@
         if (win.width() <= 992) { /* Adjust this value as needed */
             $('.my-custom-attempt').addClass('d-flex flex-column justify-content-center align-items-center vh-100');
         } else {
-            $('.my-custom-attempt').removeClass('d-flex flex-column justify-content-center align-items-center vh-100');
+            //$('.my-custom-attempt').removeClass('d-flex flex-column justify-content-center align-items-center vh-100');
+            $('.my-custom-attempt').addClass('d-flex flex-column justify-content-center align-items-center vh-100');
+
         }
     }).trigger('resize');
 </script>
