--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,12 +57,13 @@
     <div class="row align-items-center">
         <div class="col-lg-6 text-sm-center text-center text-lg-start my-custom-attempt">
             <ul>
-                <li><a href="">Small</a></li>
-                <li><a href="">Default</a></li>
-                <li><a href="">Large</a></li>
-                <li><a href="">Huge</a></li>
-                <li><a href="">Massive</a></li>
+                <li><a href="#" onclick="changeFontSize('small'); return false;">Small</a></li>
+                <li><a href="#" onclick="changeFontSize('default'); return false;">Default</a></li>
+                <li><a href="#" onclick="changeFontSize('large'); return false;">Large</a></li>
+                <li><a href="#" onclick="changeFontSize('huge'); return false;">Huge</a></li>
+                <li><a href="#" onclick="changeFontSize('massive'); return false;">Massive</a></li>
             </ul>
+
         </div>
     </div>
 </div>
@@ -88,5 +89,8 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="script.js"></script>
+
 </body>
 </html>
