--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -3,7 +3,23 @@
     --bright-green: #176985;
     --brighter-green: #1a7b99;
     --text-colour: #61666a;
+
+    --font-size-small: 0.75rem;
+    --font-size-default: 1rem; 
+    --font-size-large: 1.25rem;
+    --font-size-huge: 1.5rem; 
+    --font-size-massive: 2rem; 
 }
+
+body {
+    font-size: var(--font-size-default); 
+}
+
+
+h1 {
+  font-size: calc(var(--font-size-default) * 2);
+}
+
 body {
     background: #f5f7f8;
 }
