--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-expand-lg navbar-light my-navbar">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/home}">
-            <img src="images/logo.svg" alt="" width="40" height="8"  class="d-inline-block align-text-top">
+            <img src="logo.png" alt="" width="40" height="8"  class="d-inline-block align-text-top">
             Deafblind Scotland
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
