--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,11 +45,11 @@
     <div class="row align-items-center">
         <div class="col-lg-6 text-sm-center text-center text-lg-start my-custom-attempt">
             <ul>
-                <li><a href="#" onclick="changeFontSize('small'); return false;">Small</a></li>
-                <li><a href="#" onclick="changeFontSize('default'); return false;">Default</a></li>
-                <li><a href="#" onclick="changeFontSize('large'); return false;">Large</a></li>
-                <li><a href="#" onclick="changeFontSize('huge'); return false;">Huge</a></li>
-                <li><a href="#" onclick="changeFontSize('massive'); return false;">Massive</a></li>
+                <li><a class ="s" href="#" onclick="changeFontSize('small'); return false;">Small</a></li>
+                <li><a class ="d" href="#" onclick="changeFontSize('default'); return false;">Default</a></li>
+                <li><a class ="l" href="#" onclick="changeFontSize('large'); return false;">Large</a></li>
+                <li><a class ="h" href="#" onclick="changeFontSize('huge'); return false;">Huge</a></li>
+                <li><a class ="m" href="#" onclick="changeFontSize('massive'); return false;">Massive</a></li>
             </ul>
 
         </div>
